--- a/assets/css/theme.scss
+++ b/assets/css/theme.scss
@@ -1,7 +1,9 @@
+$primary: #000;
 $navbar-item-active-color: black;
 $navbar-item-hover-color: #000;
 $navbar-tab-active-color: #000;
-
+$pagination-color: #000;
+$pagination-focus-color: #000;
 .body {
   font-family: 'Josefin Sans', sans-serif;
 }
